Fixed remove review button alignment

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,7 +42,7 @@ body {
 .btn-customC {
 	background-color: #282e5b;
 	margin-bottom: 20px;
-	margin-left: 15px;
+	margin-left: 18px;
 }
 
 #noResult {
